# pytorch-fundamentals-lab

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: ci.yml
artifacts/iris-reference/: metrics.json  predictions.csv
docs/figures/iris-reference/: README.md  contract.md  preflight.json  provenance.json
notebooks/: 01_tensors.ipynb  02_tensor_operations.ipynb  03_autograd.ipynb  04_iris_mlp.ipynb  05_mnist_cnn.ipynb
scripts/: build_notebooks.py  render_preview.py
src/pytorch_lab/: __init__.py  __main__.py  cli.py  iris.py  mnist.py  models.py  reproducibility.py  training.py
tests/: test_cli.py  test_iris.py  test_mnist.py  test_models.py  test_repository.py  test_reproducibility.py  test_training.py
